# Automated-Integration-App

./: AndroidManifest.xml  CMakeLists.txt  GoogleService-Info.plist  LoginActivity.kt  LoginView.swift  MainActivity.kt  MainAppView.swift  MehuAPPUITests.swift  MehuAPPUITestsLaunchTests.swift  README.md  activity_login.xml  activity_main.xml  chat.cpp  colors.xml  convert_hf_to_gguf.py  gradle.properties  local.properties  login_background_gradient.xml  multimodal_qwen.py  settings.gradle.kts  strings.xml
AndroidApp/app/: build.gradle.kts
AndroidApp/gradle/wrapper/: gradle-wrapper.properties
app/: build.gradle.kts  google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native_lib.cpp
build-android/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake  compile_commands.json  llama-config.cmake  llama.pc
build-android/common/: build-info.cpp  cmake_install.cmake
build-android/examples/: CTestTestfile.cmake  cmake_install.cmake
build-android/examples/batched/: CTestTestfile.cmake  cmake_install.cmake
build-android/examples/convert-llama2c-to-ggml/: CTestTestfile.cmake  cmake_install.cmake
build-android/examples/embedding/: CTestTestfile.cmake  cmake_install.cmake
build-android/examples/eval-callback/: CTestTestfile.cmake  cmake_install.cmake
build-android/examples/gen-docs/: CTestTestfile.cmake  cmake_install.cmake
build-android/examples/gguf/: CTestTestfile.cmake  cmake_install.cmake
build-android/examples/gguf-hash/: CTestTestfile.cmake  cmake_install.cmake
build-android/examples/gritlm/: CTestTestfile.cmake  cmake_install.cmake
build-android/examples/lookahead/: CTestTestfile.cmake  cmake_install.cmake
build-android/examples/lookup/: CTestTestfile.cmake  cmake_install.cmake
build-android/examples/parallel/: CTestTestfile.cmake  cmake_install.cmake
build-android/examples/passkey/: CTestTestfile.cmake  cmake_install.cmake
build-android/examples/retrieval/: CTestTestfile.cmake  cmake_install.cmake
build-android/examples/save-load-state/: CTestTestfile.cmake  cmake_install.cmake
build-android/examples/simple/: CTestTestfile.cmake  cmake_install.cmake
build-android/examples/simple-chat/: CTestTestfile.cmake  cmake_install.cmake
build-android/examples/speculative/: CTestTestfile.cmake  cmake_install.cmake
build-android/examples/speculative-simple/: CTestTestfile.cmake  cmake_install.cmake
build-android/examples/training/: CTestTestfile.cmake  cmake_install.cmake
build-android/ggml/: cmake_install.cmake  ggml-config.cmake  ggml-version.cmake
build-android/ggml/src/: cmake_install.cmake
build-android/pocs/: CTestTestfile.cmake  cmake_install.cmake
build-android/pocs/vdot/: CTestTestfile.cmake  cmake_install.cmake
build-android/src/: cmake_install.cmake
build-android/tests/: CTestTestfile.cmake  cmake_install.cmake
build-android/tools/: CTestTestfile.cmake  cmake_install.cmake
build-android/tools/batched-bench/: CTestTestfile.cmake  cmake_install.cmake
build-android/tools/cvector-generator/: CTestTestfile.cmake  cmake_install.cmake
build-android/tools/export-lora/: CTestTestfile.cmake  cmake_install.cmake
build-android/tools/gguf-split/: CTestTestfile.cmake  cmake_install.cmake
build-android/tools/imatrix/: CTestTestfile.cmake  cmake_install.cmake
build-android/tools/llama-bench/: CTestTestfile.cmake  cmake_install.cmake
build-android/tools/main/: CTestTestfile.cmake  cmake_install.cmake
build-android/tools/mtmd/: CTestTestfile.cmake  cmake_install.cmake
build-android/tools/perplexity/: CTestTestfile.cmake  cmake_install.cmake
build-android/tools/quantize/: CTestTestfile.cmake  cmake_install.cmake
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+29 files in other folders)
